# scm-platform

./: .craft.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  release.yml  tests.yml
src/scm/: actions.py  errors.py  facade.py  helpers.py  manager.py  rate_limit.py  rpc.py  test_fixtures.py  types.py
src/scm/cases/: seer.py
src/scm/providers/github/: hooks.py  provider.py  types.py
src/scm/providers/gitlab/: provider.py
src/scm/rpc/: client.py  errors.py  helpers.py  server.py  types.py
tests/: test_fixtures.py
tests/unit/: test_actions.py  test_cases_seer.py  test_manager.py  test_rate_limit.py  test_rpc.py  test_rpc_client.py  test_rpc_integration.py  test_rpc_server.py  test_rpc_types.py
tests/unit/provider/: test_github.py  test_gitlab.py
